[package]
name = "bls_sigs"
version = "1.0.0"
authors = ["bmarsh <ben@mintlayer.org"]
license = "MIT"

[features]
alloc = ["bls12_381_plus/alloc"]
default = ["alloc"]

[dependencies]
bls12_381_plus = "0.4"
ff = "0.9"
group = "0.9"
hkdf = "0.10"
pairing = "0.19"
serde = { version = "1.0", features = ["derive"] }
sha2 = { version = "0.9", default-features = false }
subtle = { version = "2.4", default-features = false }
zeroize = { version = "1.2", features = ["zeroize_derive"] }